Mostly a collection of various cleanups and an addition or two for the CodeGenerator project.